// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test Header should render correctly 1`] = `
<div>
  <div
    class="header class"
  >
    Header
  </div>
</div>
`;

exports[`test Header should render correctly 2`] = `
<div>
  <div
    class="header class class2"
  >
    Header
  </div>
</div>
`;
